first commit for branch multi

--- a/conf10/odoo.conf
+++ b/conf10/odoo.conf
@@ -55,7 +55,7 @@ auto_reload = True
 ; db_host = db
 ; db_user = odoo
 ; db_password = odoo_db_pass
-admin_passwd = RazPunz31
+admin_passwd = admin
 ; csv_internal_sep = ,
 ; db_maxconn = 64
 ; db_name = False
